# TrueLibft

./: CMakeLists.txt  a.out  auteur  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strrchr.c  ft_strstr.c  ft_tolower.c  libft.h
libft/: Makefile  auteur  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isnegativ.c  ft_isprint.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  (+12 more)
personal/: a.out  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memset.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strlen.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_tolower.c  libft.h  strrchr.c
